Fix letter spacing

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   padding: 0;
   box-sizing: border-box;
   color: white;
+  letter-spacing: 2px;
 }
 
 .layout{
